force-app/main/default/objects/TTS_Award_Budget_Period__c/TTS_Award_Budget_Period__c.object-meta.xml
<CustomObject>
    <description>[TTS] Budget periods for a Funding Award, tracking budgeted versus actual spend for sponsor financial reporting.</description>
    <label>Award Budget Period</label>
    <nameField>
        <displayFormat>BP{00000}</displayFormat>
        <label>Budget Period ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Award Budget Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>