force-app/main/default/objects/TTS_Award_Budget_Period__c/fields/Actual_Spend__c.field-meta.xml
<CustomField>
    <fullName>Actual_Spend__c</fullName>
    <description>Amount actually spent in this period. Held in the record's currency in multi-currency orgs.</description>
    <inlineHelpText>Enter the actual spend for this period.</inlineHelpText>
    <label>Actual Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>