force-app/main/default/objects/TTS_Award_Budget_Period__c/fields/Budgeted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Amount__c</fullName>
    <description>Amount budgeted for this period. Held in the record's currency in multi-currency orgs.</description>
    <inlineHelpText>Enter the budgeted amount for this period.</inlineHelpText>
    <label>Budgeted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>