force-app/main/default/objects/TTS_Award_Budget_Period__c/fields/Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award__c</fullName>
    <label>Funding Award</label>
    <referenceTo>TTS_Funding_Award__c</referenceTo>
    <relationshipLabel>Budget Periods</relationshipLabel>
    <relationshipName>Budget_Periods</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>