force-app/main/default/objects/TTS_Award_Budget_Period__c/fields/Period_End__c.field-meta.xml
<CustomField>
    <fullName>Period_End__c</fullName>
    <description>End date of this budget period.</description>
    <inlineHelpText>Enter the end date of this budget period.</inlineHelpText>
    <label>Period End</label>
    <type>Date</type>
</CustomField>