force-app/main/default/objects/TTS_Award_Budget_Period__c/fields/Period_Number__c.field-meta.xml
<CustomField>
    <fullName>Period_Number__c</fullName>
    <description>Sequential number of the budget period within the award (e.g. year 1, 2, 3).</description>
    <inlineHelpText>Enter the sequence number of this budget period.</inlineHelpText>
    <label>Period Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>