force-app/main/default/objects/TTS_Award_Budget_Period__c/fields/Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_Start__c</fullName>
    <description>Start date of this budget period.</description>
    <inlineHelpText>Enter the start date of this budget period.</inlineHelpText>
    <label>Period Start</label>
    <type>Date</type>
</CustomField>