force-app/main/default/objects/TTS_Award_Budget_Period__c/fields/Variance__c.field-meta.xml
<CustomField>
    <fullName>Variance__c</fullName>
    <description>Budgeted amount less actual spend for the period. Same-object currency formula, safe in single- and multi-currency orgs.</description>
    <formula>Budgeted_Amount__c - Actual_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>